--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,7 +7,7 @@
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, at unde qui ex est velit laudantium dolores fuga, quam
 					nobis quo earum repellendus dicta perferendis voluptates saepe nostrum, odit aperiam.
 				</p>
-				<h4>NodeJS Version</h4>
+				<h4>JS Version</h4>
 				<p>{{ version }}</p>
 			</div>
 		</div>
