--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,8 +1,9 @@
+{{> header }} {{> banner }}
 <section class="content">
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h2>About Page</h2>
+				<h3>About Page</h3>
 				<p>
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, at unde qui ex est velit laudantium dolores fuga, quam
 					nobis quo earum repellendus dicta perferendis voluptates saepe nostrum, odit aperiam.
@@ -13,3 +14,4 @@
 		</div>
 	</div>
 </section>
+{{> footer }}
