--- a/views/medusa.hbs
+++ b/views/medusa.hbs
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="./css/medusa.css">
-
+{{> header }} {{> banner }}
 <section class="gallery">
 	<div class="container">
 		<h3>Gallery
@@ -43,5 +42,4 @@
 		</div>
 	</div>
 </section>
-
-<script src="./js/medusa.js" defer></script>
+{{> footer }}
