--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,4 @@
+{{> header }} {{> banner }}
 <section class="content">
 	<div class="container">
 		<div class="row">
@@ -11,3 +12,4 @@
 		</div>
 	</div>
 </section>
+{{> footer }}
