--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,9 +1,24 @@
-<nav class="header__nav">
-	<ul class="nav justify-content-end">
-		{{#each pages}}
-		<li class="nav-item">
-			<a href="{{ link }}" class="nav-link {{ isActive link }}">{{ title }}</a>
-		</li>
-		{{/each}}
-	</ul>
-</nav>
+<header class="header">
+	<div class="container">
+		<div class="row">
+			<div class="col-2 d-none d-sm-block">
+				<div class="header__logo">
+					<a href="/">
+						<img src="./img/logo.png" alt="IMT Logo">
+					</a>
+				</div>
+			</div>
+			<div class="col-sm-10">
+				<nav class="header__nav">
+					<ul class="nav justify-content-end">
+						{{#each pages}}
+						<li class="nav-item">
+							<a href="{{ link }}" class="nav-link {{ isActive link }}">{{ title }}</a>
+						</li>
+						{{/each}}
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</div>
+</header>
