--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,64 +1,14 @@
-html, body {
-	height: 100%;
-}
-
-.header {
-	/* position: fixed; */
-	width: 100%;
-	min-height: 40px;
-	/* background-color: rgba(255, 255, 255, .95); */
-	background-color: #fff;
-	z-index: 10;
-}
-
-.header__logo img {
-	max-height: 40px;
-}
-
-.header__nav a {
-	color: #000;
-}
-
-.header__nav a:hover {
-	color: #02baab;
-}
-
-.header__nav .active {
-	background-color: #02baab;
-	color: #fff;
-	cursor: default;
-}
-
-.header__nav .active:hover {
-	color: #fff;
-}
-
 .banner {
 	position: relative;
-	/* height: 100vh; */
-	/* display: flex; */
-	/* justify-content: center; */
-	/* align-items: center; */
-
-	/* align-content: center; */
-	padding: 20% 0;
-	/* flex-direction: row; */
-
+	padding-top: 40px;
+	min-height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background: #111 url('../img/banner.jpg') fixed center center no-repeat;
 	background-size: cover;
 	text-align: center;
 	color: #fff;
-}
-
-.banner__content {
-	/* align-self: center; */
-	/* align-items: center; */
-	/* display: flex; */
-	/* min-height: 100vh; */
-	/* min-height: calc("100vh - 40px"); */
-	/* justify-content: center; */
-	/* align-content: center; */
-	/* flex-direction: column; */
 }
 
 .banner::before {
@@ -105,62 +55,18 @@ html, body {
 	padding: 50px 0;
 }
 
-.gallery {
-	padding: 50px 0;
-}
-
-.chat {
-	min-height: calc(100% - 40px);
-	background-color: #02baab;
-	padding: 50px 0 170px;
-}
-
-.chat-area {
-	/* background-color: #02baab; */
-}
-
-.chat-form {
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-	padding: 10px 10px 0;
-	background-color: #02baab50;
-}
-
-.chat-form .input-group {
-	margin-bottom: 10px;
-}
-
-/* .chat-form .form-control {
-	height: 38px;
-} */
-
-.message {
-	background-color: #fff;
-}
-
-.avatar {
-	padding: 5px 0;
-	text-align: right;
-}
-
-.avatar__img {
-	width: 50px;	
-}
-
-.message__content {
-}
-
-#chatEmoji {
-	cursor: pointer;
-}
-
-#chatEmoji:hover {
-	background-color: #fff;
-}
-
 .footer {
 	background-color: #000;
 	color: #fff;
 	padding: 30px 0;
+}
+
+@media (max-width: 768px) {
+	.banner__title, .banner__text {
+		font-size: 40px;
+	}
+	.banner__btn {
+		padding: 5px 15px;
+		font-size: 12px;
+	}
 }
