--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,20 +15,20 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 
+	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/main.css">
-	<link rel="stylesheet" href="./css/media.css">
 </head>
 
 <body>
 	{{{ body }}}
 
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" defer></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js" defer></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" defer></script> {{!--
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.js" defer></script> --}}
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 
-	<script src="./js/main.js" defer></script>
+	<script src="./js/common.js"></script>
+	<script src="./js/main.js"></script>
 </body>
 
 </html>
