--- a/views/medusa.hbs
+++ b/views/medusa.hbs
@@ -1,5 +1,5 @@
 {{> header }} {{> banner }}
-<section class="gallery">
+<section class="content">
 	<div class="container">
 		<h3>Gallery
 			<span class="text-muted">Owl Carousel 2 + Fancybox</span>
