--- a/views/partials/banner.hbs
+++ b/views/partials/banner.hbs
@@ -1,7 +1,7 @@
 <section class="banner">
 	<div class="container_fluid">
 		<div class="row no-gutters">
-			<div class="col banner__content">
+			<div class="col-12 banner__content">
 				<h1 class="banner__title">Creating a unique look.</h1>
 				<p class="banner__text">Never been easier.</p>
 				<button class="banner__btn text-uppercase">See Features</button>
